# Trading-guide-agent

./: .env.example  .gitignore  .vercelignore  DEPENDENCY_SIZE_NOTES.md  README.md  VERCEL_DEPLOYMENT.md  env.example  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.tsbuildinfo  vercel.json
.cursor/rules/: frontend-rule.mdc
api/: index.py
app/: globals.css  layout.tsx  page.tsx
components/: chat-composer.tsx  chat-message.tsx  chat-sidebar.tsx  how-it-works-dialog.tsx  settings-drawer.tsx  theme-toggle.tsx  topic-guides-dialog.tsx  typing-indicator.tsx  welcome-card.tsx
components/ui/: scroll-area.tsx
helpers/: agent.py  file_doc_store.py  trading_tools.py  tradingview_tools.py  vector_db.py
lib/: api.ts  chat-data.ts  chat-storage.ts
notebooks/: data_ingest.ipynb  generate_testset.ipynb  redis_test.ipynb
tradingview-mcp-main/src/tradingview_mcp/core/utils/: validators.py
